# PatternJoin

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: bounded_edit_distance.cpp  bounded_edit_distance.h  bounded_edit_distance.hpp  duplicates_search.hpp  file_io.cpp  file_io.h  file_io.hpp  hash_containers.h  hash_containers.hpp  main.cpp  map_patterns.cpp  map_patterns.h  map_patterns.hpp  patterns_generators.cpp  patterns_generators.h  patterns_generators.hpp  sim_search_part_patterns.cpp  sim_search_part_patterns.h  sim_search_part_patterns.hpp  sim_search_patterns.cpp  sim_search_patterns.h  sim_search_patterns.hpp  sim_search_semi_patterns.cpp  sim_search_semi_patterns.h  sim_search_semi_patterns.hpp  trim_strings.hpp
test/: test.py
